@@ -1,5 +1,6 @@
 == master
 
+* Remove the PluginAWeek namespace
 * Rename Message#hide!/unhide! to Message#hide/unhide and MessageRecipient#hide!/unhide! to MessageRecipient#hide/unhide
 
 == 0.2.0 / 2008-10-26
